syntax = "proto3";

option java_multiple_files = true;
package rs.ac.uns.ftn.grpc;
import "model.proto";

service SpringDrugPurchaseService{
  rpc purchaseDrug (RequestForDrugPurchase) returns (ResponseForDrugPurchase);
}