syntax = "proto3";

package rs.ac.uns.ftn.grpc;
option csharp_namespace = "bolnica_back.Protos";

message MessageProto {
  string message = 1;
  int64 randomInteger = 2;
}

message MessageResponseProto {
  string response = 1;
  string status = 2;
}

message RequestForDrugPurchase {
  string drugName = 1;
  int32 drugQuantity = 2;
}

message ResponseForDrugPurchase{
  string response = 1;
  string status = 2;
}

message RequestForRecipeMaking {
  string jmbg = 1;
  string drugName = 2;
  int32 quantity = 3;
}

message ResponseForRecipeMaking {
  string message = 1;
  string status = 2;
}